--- a/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
+++ b/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
@@ -1,14 +1,14 @@
 \chapter{System Description}\label{SystemDescription}
-As a part of this semesters requirements, the developed product must take the
-form of an embedded systems. In addition, the system must also make use of the
-techiques taught in either the 'Real Time Systems (RTS)' course, or the 'Machine
-Intelligence (MI)' course. As none of the group's participants are partaking in
-the RTS course, this project will be focused on the techniques and models taught in
-the MI course. In order to implement these techniques we will need to gain a
-deeper understanding of these concepts. As such, this chapter will be used to
-describe what an embedded system is, how real-time systems incorporate deadlines
-and schedules and examine what elements from machine intelligence can be used
-by an autonomous turret.
+As a part of this semester's requirements, the developed product must take the
+form of an embedded systems. In addition, the system must also make use of
+techniques relating to the fields of real-time systems or machine intelligence.
+As such, this project will be focused on using techniques relating to machine
+intelligence, while cursory touching upon the subject of real-time systems. In
+order to implement these techniques, we will need to gain a deeper understanding
+of these concepts. As such, this chapter will be used to describe what an
+embedded system is, which aspects from real-time systems are important for
+embedded systems and which elements from machine intelligence can be
+used by an autonomous turret.
 
 \section{Embedded Systems}
 As explained by the embedded systems manufacturer BarrGroup
@@ -31,10 +31,10 @@ of an antilock braking system in a car.}
 % \textit{An  embedded  system  is  nearly  any computing system other than a desktop,
 % laptop, or  mainframe  computer.}\nl
 
-This means that embedded systems cover alot of different types of systems, for
-example the antilock braking system (ABS) in a modern car, the cash registers in
-retail stores and washing machines. The requirements can therefore differ alot
-between systems, although they do share some characteristics \citep[ch.1.1]{vahid1999embedded}:
+This means that embedded systems cover a lot of different types of systems, for
+example the antilock braking system (ABS) in a modern car and washing machines.
+The requirements can therefore differ between systems, although they do share
+some characteristics \citep[ch.1.1]{vahid1999embedded}:
 
 \begin{enumerate}
   \item \textbf{Single-functioned}: Most embedded systems only have a single
@@ -50,6 +50,6 @@ between systems, although they do share some characteristics \citep[ch.1.1]{vahi
   system smaller without making it more expensive.
   \item \textbf{Reactive and real-time}: Many embedded systems have to react to
   some kind of external stimuli. If an embedded system has to take into account
-  this external dyniamic information, it is considered a real-time system. We
-  will further expand upon what this means in \autoref{rts}.
+  this external dynamic information, it is considered a real-time system. We
+  will further elaborate upon what this means in \autoref{rts}.
 \end{enumerate}
