--- a/sections/Implementation/MIImplementation/ImplBN.tex
+++ b/sections/Implementation/MIImplementation/ImplBN.tex
@@ -22,30 +22,37 @@ One of the first issues with implementing the model on the NXT is the amount of
 RAM for the computing the network. The primary limitation for the NXT is the
 low amount of RAM, namely 64KB, see \autoref{PlatformC}. Although the flash
 storage on the NXT is larger, at 256KB, it is still necessary to load the code
-into the RAM, so the real limiting factor is still the amount of available RAM.
-In order to implement the network on the NXT, it is necessary to reduce the
-complexity of the model or else it wont be possible to implement it on the NXT.
-Since the first network had a state space of $3^2*5^6 = 140625$ states, this
-would theoretically need 560KB of RAM given that each state is 4 byte. The 4
-bytes are assumed as the NXT uses 32 bit to represent floating points which is
-the largest type used. However if we remove some of the states which are not
-necessary according to the implementation, the state space could be reduced to
-$3^1*5^4 = 1875$ which given a size of the state of each space at 4 bytes would
-need 7.5KB in the worst case. Given this state space it would be possible to
-implement the belief network on the NXT.\nl
+and data into the RAM, so the real limiting factor is still the amount of
+available RAM. In order to implement the network on the NXT, it is necessary to
+reduce the complexity of the model or else it wont be possible to implement it on the NXT.
+Since the first network had a joint probability of $3^2*5^6 = 140625$ for
+all states, which yields a theoretical size of 560KB given that each state is 4
+byte. But since this is the joint probability for the entire network, this is only the
+worst case. It would thus be possible to use variable elimination to simplify
+the needed tables. Another thing to consider is loading some of the tables into
+the flash storage of the NXT, this could potentialy make it possible to
+implement a more complex network. However this also introduces the need for
+swapping in and out of memory. 
+%  if we remove some of
+% the states which are not necessary according to the implementation, the state space could be reduced
+% to $3^1*5^4 = 1875$ which given a size of the state of each space at 4 bytes
+% would need 7.5KB in the worst case. Given this state space it would be possible
+% to implement the belief network on the NXT.\nl
 
 A possible way to implement the network on the NXT would be to choose another
 programming language for the brick. If for example a programming language such
 as leJos was used on the NXT it would in theory be possible to implement the
 Hugin API directly on the NXT. This language could potentially be used as the
-language is a tiny Java Virtual Machine \cite{LeJos}. This solution however
-does present some issues, the first being the amount of flash memory on the NXT and the second
-being that there are no guaranties that the Hugin API will work with it. Another
-example of a language that might work could be the RobotC language, which
-presents the same issues as the leJos language \cite{RobotC}.
+language is a tiny Java Virtual Machine (JVM) \cite{LeJos}. One of the
+advantages of using the JVM is that it is platform independent, This means
+that the JVM uses the same instruction set on the PC and on the brick. This
+solution however does present some issues, the first being the amount of flash
+memory on the NXT and the second being the runtime, this is an issue since the
+processor in the NXT is not very powerfull compared to a PC.
+The third issue is that there are no guaranties that the Hugin API will work with it.
 
 \subsection{Option Two}
-The second option involves using a computer for computing the
+The second option involves using a PC for computing the
 belief network. Using this approach would require the computation to be fully
 automated in order to still consider the system embedded.\nl
 
@@ -65,7 +72,9 @@ two alternatives. The NXT is capable of communicating with the computer either
 via either USB or Bluetooth. The USB approach would require a cable connecting
 the NXT to the computer.
 This could complicate certain things like the horizontal rotation, since the
-cable could potentially restrict the movement by adding more resistance.\nl
+cable could potentially restrict the movement by adding more resistance.
+Another issue that complicate it even further is how fast we will be able to
+send the data to and from the NXT.\nl
 
 Using Bluetooth for communication would have been preferred, since there are
 no cables to restrict the turret when it turns.
