--- a/sections/Implementation/MIImplementation/ImplBN.tex
+++ b/sections/Implementation/MIImplementation/ImplBN.tex
@@ -4,7 +4,7 @@ implemented. There will also be a discussion of the pros and cons compared to
 the different solutions.
 
 \section{Implementation}
-We did not implement a belief network, therefor this section will be used to
+We did not implement a belief network, therefore this section will be used to
 discuss how it could have been implemented. To implement the network there are
 two options, one where it could be implemented on the NXT and the other where it is
 implemented on a PC.
@@ -27,12 +27,12 @@ available RAM. In order to implement the network on the NXT, it is necessary to
 reduce the complexity of the model or else it wont be possible to implement it on the NXT.
 Since the first network had a joint probability of $3^2*5^6 = 140625$ for
 all states, which yields a theoretical size of 560KB given that each state is 4
-byte. But since this is the joint probability for the entire network, this is only the
+bytes. But since this is the joint probability for the entire network, this is only the
 worst case. It would thus be possible to use variable elimination to simplify
 the needed tables. Another thing to consider is loading some of the tables into
-the flash storage of the NXT, this could potentialy make it possible to
+the flash storage of the NXT, this could potentially make it possible to
 implement a more complex network. However this also introduces the need for
-swapping in and out of memory. 
+swapping in and out of memory.
 %  if we remove some of
 % the states which are not necessary according to the implementation, the state space could be reduced
 % to $3^1*5^4 = 1875$ which given a size of the state of each space at 4 bytes
@@ -48,7 +48,7 @@ advantages of using the JVM is that it is platform independent, This means
 that the JVM uses the same instruction set on the PC and on the brick. This
 solution however does present some issues, the first being the amount of flash
 memory on the NXT and the second being the runtime, this is an issue since the
-processor in the NXT is not very powerfull compared to a PC.
+processor in the NXT is not very powerful compared to a PC.
 The third issue is that there are no guaranties that the Hugin API will work with it.
 
 \subsection{Option Two}
@@ -73,7 +73,7 @@ via either USB or Bluetooth. The USB approach would require a cable connecting
 the NXT to the computer.
 This could complicate certain things like the horizontal rotation, since the
 cable could potentially restrict the movement by adding more resistance.
-Another issue that complicate it even further is how fast we will be able to
+Another issue that complicates it even further is how fast we will be able to
 send the data to and from the NXT.\nl
 
 Using Bluetooth for communication would have been preferred, since there are
@@ -85,8 +85,7 @@ messages between the brick and the PC.\nl
 Next step would be to figure out in what format the communication should occur.
 The NXT should send the sensor input needed for evidence to the PC. Since our
 sensor values are defined in the model in intervals, we need to convert the
-sensor value to the corresponding interval in the node. This can be achieved two ways. Either
-the NXT does the conversion and sends the modified value to the PC, or the NXT
+sensor value to the corresponding interval in the node. This can be achieved two ways. Either the NXT does the conversion and sends the modified value to the PC, or the NXT
 sends the full sensor value and the conversion is done on the computer before
 being fed as evidence to the model.\nl
 
@@ -103,7 +102,7 @@ API will work. Another issue with option 1 is the limited memory and storage on
 the NXT. Option 2 has a greater chance of working as the only issue we
 encountered was establishing serial communication between the NXT and the PC.
 This problem could however with some more time and research be solved.
-Therefore, the second option is a better way to implement it. 
+Therefore, the second option is a better way to implement it.
 
 % Our idea for implementing the network is using a computer running a program
 % written in C\# which takes an input from the NXT, this input would be gotten
