--- a/sections/Design/BNDesig/DomainsAndProbs.tex
+++ b/sections/Design/BNDesig/DomainsAndProbs.tex
@@ -61,11 +61,11 @@ both \texttt{Vector\_1} and \texttt{Vector\_2}, this can be seen in
 
 \begin{table}[H]
 \centering
-\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|}
+\begin{tabular}{|l|p{1.2cm}|p{1.2cm}|l|p{1.2cm}|p{1.2cm}|p{1.2cm}|l|p{1.2cm}|p{1.2cm}|}
 \hline
 \multicolumn{10}{|l|}{P(SD\_1|Vector\_1, Vector\_2)} \\\hline 
-Vector\_2 & \multicolumn{3}{l|}{80} & \multicolumn{3}{l|}{Bad} &
-\multicolumn{3}{l|}{60}\\\hline 
+Vector\_2 & \multicolumn{3}{l|}{80\%} & \multicolumn{3}{l|}{Bad} &
+\multicolumn{3}{l|}{60\%}\\\hline 
 Vector\_1 & 80\%      &  Bad     & 60\%      & 80\%      & Bad      & 60\%     
 & 80\% & Bad & 60\% \\\hline
 [0-60]&1/12 = 0.08 & 1/3 = 0.33 & 0      & 2/12 = 0.17 & 1/6 = 0.17 & 0 & 0  
@@ -82,6 +82,7 @@ Vector\_1 & 80\%      &  Bad     & 60\%      & 80\%      & Bad      & 60\%
 \caption{The probability table for sensing the distance given two vectors.}
 \label{SDtable2}
 \end{table}
+
 
 % Vector\_0     & (0.028; -0.013) & (-0.005; -0.028) & (0.028,-0.028)  \\\hline   
 % [0 - 60]      & 0    & 0    & 2    \\ \hline 
@@ -119,13 +120,12 @@ The probability table for \texttt{SA\_1} is given as:
 \begin{table}[H]
 \centering
 %{|l|l|l|l|l|l|l|l|l|l|}
-\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|}
+\begin{tabular}{|l|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|}
 \hline
 \multicolumn{10}{|l|}{P(SA\_1|Vector\_1, Vector\_2)} \\\hline 
-Vector\_2 & \multicolumn{3}{l|}{80} & \multicolumn{3}{l|}{Bad} &
-\multicolumn{3}{l|}{60}\\\hline 
-Vector\_2 & (0.033;-0.029) 80\% & (0.012;-0.014) Bad & 60\% &(0.033;-0.029) 80\%
-& (0.012;0.014) Bad & 60\% & (0.033;0.029) 80\% & (0.012;-0.014) Bad & 60\% \\
+Vector\_1 & \multicolumn{3}{l|}{80\%} & \multicolumn{3}{l|}{Bad} &
+\multicolumn{3}{l|}{60\%}\\\hline 
+Vector\_2 & 80\% & Bad & 60\% & 80\% & Bad & 60\% & 80\% & Bad & 60\% \\
 \hline
 [-30 - 0] & 5/12 = 0.42  & 0/3 = 0 & 0/1 = 0 & 0/12 = 0 & 0/6 = 0 & 0/3 = 0 &
 0/1 = 0 & 0/15 = 0 & 0/9 = 0 \\ \hline
