--- a/sections/Appendix/MI/MIData.tex
+++ b/sections/Appendix/MI/MIData.tex
@@ -1,5 +1,5 @@
 \chapter{MI Data}\label{AppendixMIData}
-Below can the data which are used in the design of the model.\nl
+Below the data which are used in the design of the model can be seen.\nl
 \dataTable{MIData60}{The data from where the target has a speed of
 60\%}{Data60}
 \dataTable{MIData80}{The data from where the target has a speed of
