Added a new source and added in the text

--- a/sections/Conclusion/Discussion.tex
+++ b/sections/Conclusion/Discussion.tex
@@ -174,8 +174,8 @@ the task are scheduled. If we had chosen another language we would have had more
 options in terms of scheduling. For example if we had chosen LeJos it would have
 been possible to create periodic tasks, this has the advantage of giving more
 control of the flow in the program. The LeJos also has support for choosing when
-threads are started, this in terms gives us the option to more or less make our
-own scheduler.
+threads are started, this in terms gives us the option to have a lot more
+control over the scheduler \cite{lejosTimer}.
 
 
 \section{Less Multithreading}
