--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -1,5 +1,5 @@
 @Misc{lejosTimer,
-  title={Timer(leJos NXJ API documentation},
+  title={{Timer (leJOS NXJ API documentation)}},
   note={seen 14/12/2016},
   howpublished={\url{http://www.lejos.org/nxt/nxj/api/java/util/Timer.html}}
 }
