--- a/sections/Design/BNDesig/DomainsAndProbs.tex
+++ b/sections/Design/BNDesig/DomainsAndProbs.tex
@@ -224,11 +224,10 @@ together. Three different vectors are found, an average for the target going at
 80\%, an average 60\% and finally a vector that is faulty.
 
 This means that the vectors domain consist of 3 values, a vector for moving
-at 80\%, 60\% and a bad vector, see \autoref{Vector0_table}.
+at 80\%, 60\% and a bad vector, see \autoref{Vector0Table}. 
 
 \begin{center}
 \begin{table}[H]
-\label{Vector0_table}
 \begin{tabular}{|l|l|}
 \hline
 P(Vector\_1) &\\ \hline
@@ -237,6 +236,7 @@ P(Vector\_1) &\\ \hline
 (60\%)   & 13/33 = 0.39  \\ \hline
 \end{tabular}
 \caption{The probability table for a Vector\_1}
+\label{Vector0Table}
 \end{table}
 \end{center}
 
@@ -244,7 +244,6 @@ The probability for \texttt{Vector\_2} is given as the following conditional
 probability table: 
 \begin{table}[]
 \centering
-\label{vector2tab}
 \begin{tabular}{|l|l|l|l|}
 \hline
 \multicolumn{4}{|l|}{P(Vector\_2|Vector\_1)} \\ \hline
@@ -254,6 +253,7 @@ probability table:
  60    & 0            & 5/8 = 0.62    & 3/4 = 0.75  \\ \hline
 \end{tabular}
 \caption{The conditional probability table of Vector\_2 given Vector\_1}
+\label{vector2tab} 
 \end{table}
 
 
