--- a/sections/Design/BNDesig/DomainsAndProbs.tex
+++ b/sections/Design/BNDesig/DomainsAndProbs.tex
@@ -1,3 +1,7 @@
+\section{Domains and Probability}\label{MID}
+The purpose of the model is to predict \texttt{Vector\_2} when given information
+about \texttt{Vector\_1}. In order to do this, we need to model how the two
+vectors relate to each other, and how they are affected by information about the
 targets location. The first step to this approach is to define what this
 information's domains is, that is, how the data is represented and used.
 There are however limitations we need to consider in relation to the
