--- a/sections/Design/BNDesig/DomainsAndProbs.tex
+++ b/sections/Design/BNDesig/DomainsAndProbs.tex
@@ -77,8 +77,10 @@ probability table.\nl
 
 The domain for distance is divided into 5 intervals, with the first and the last
 intervals being the biggest. This ensures that we can have improved precision
-for the remaining 3 intervals. As such the probability table for \texttt{SD\_0}
-and \texttt{SD\_2} can be seen in see \autoref{SDtable}.
+for the remaining 3 intervals. As such, the probability table for \texttt{SD\_0}
+and \texttt{SD\_2} can be seen in seen \autoref{SDtable}. The presented
+probabilities are based on a set of test-data, which can be found in
+\autoref{AppendixMIData}.
 
 \begin{center}
 \begin{table}[H]
