--- a/sections/Implementation/MIImplementation/ImplBN.tex
+++ b/sections/Implementation/MIImplementation/ImplBN.tex
@@ -25,14 +25,17 @@ storage on the NXT is larger, at 256KB, it is still necessary to load the code
 and data into the RAM, so the real limiting factor is still the amount of
 available RAM. In order to implement the network on the NXT, it is necessary to
 reduce the complexity of the model or else it wont be possible to implement it on the NXT.
-Since the first network had a joint probability of $3^2*5^6 = 140625$ for
-all states, which yields a theoretical size of 560KB given that each state is 4
-bytes. But since this is the joint probability for the entire network, this is only the
-worst case. It would thus be possible to use variable elimination to simplify
-the needed tables. Another thing to consider is loading some of the tables into
-the flash storage of the NXT, this could potentially make it possible to
-implement a more complex network. However this also introduces the need for
-swapping in and out of memory.
+Since the first network had a joint probability of $3^2*5^6 = 140625$, the
+calculation is made using the number of states in each node. In this case it
+means that there are 2 nodes with 3 states and 6 node with 5 states, the
+grouping of these can be seen in \autoref{BNGrouped}. The joint probability
+yields a theoretical size of 560KB given that each state is 4 bytes. But
+since this is the joint probability for the entire network, this calculation is
+the worst case. It would thus be possible to use variable elimination to simplify the needed
+tables. Another thing to consider is loading some of the tables into the flash
+storage of the NXT, this could potentially make it possible to implement a more
+complex network. However this also introduces the need for swapping in and out
+of memory.
 %  if we remove some of
 % the states which are not necessary according to the implementation, the state space could be reduced
 % to $3^1*5^4 = 1875$ which given a size of the state of each space at 4 bytes
@@ -50,6 +53,8 @@ solution however does present some issues, the first being the amount of flash
 memory on the NXT and the second being the runtime, this is an issue since the
 processor in the NXT is not very powerful compared to a PC.
 The third issue is that there are no guaranties that the Hugin API will work with it.
+
+\figx{BNGrouped}{Done Bayesian Network Grouped}
 
 \subsection{Option Two}
 The second option involves using a PC for computing the
