--- a/sections/Design/BNDesig/DomainsAndProbs.tex
+++ b/sections/Design/BNDesig/DomainsAndProbs.tex
@@ -294,7 +294,7 @@ In order to use the model we need to insert evidence, ``e'', unto the sensor
 nodes of network. This information is then able to flow to both of the vector
 nodes through the connections mentioned in \autoref{LabelBN}.
 
-\figx{BNEvidence}{The network with evidence on its sensor nodes.}
+\figx[1.15]{BNEvidence}{The network with evidence on its sensor nodes.}
 
 We can look at \texttt{Vector\_2} and find the most likely outcome of it, and
 see if it is likely to be a bad vector.
