--- a/sections/Implementation/MIImplementation/ImplBN.tex
+++ b/sections/Implementation/MIImplementation/ImplBN.tex
@@ -54,7 +54,7 @@ memory on the NXT and the second being the runtime, this is an issue since the
 processor in the NXT is not very powerful compared to a PC.
 The third issue is that there are no guaranties that the Hugin API will work with it.
 
-\figx{BNGrouped}{Done Bayesian Network Grouped}
+\figx[1]{BNGrouped}{Done Bayesian Network Grouped}
 
 \subsection{Option Two}
 The second option involves using a PC for computing the
