--- a/sections/Design/BNDesig/DomainsAndProbs.tex
+++ b/sections/Design/BNDesig/DomainsAndProbs.tex
@@ -43,8 +43,8 @@ and \texttt{SD\_2} can be seen in see \autoref{SDtable}.
 \hline
 \multicolumn{4}{|l|}{P(SD\_0|Vector\_1)} \\ \hline
 Vector\_0     & (0.033; -0.029)-80\% & (0.012; -0.014)-Bad observations &
-(0.020,-0.018)-60\% \\\hline 
-[0 - 60]      & 3/22 = 0.14 & 3/27 = 0.11 & 0 \\ \hline 
+(0.020,-0.018)-60\% \\\hline
+[0 - 60]      & 3/22 = 0.14 & 3/27 = 0.11 & 0 \\ \hline
 [60 - 75]    & 9/22 = 0.41 & 12/27 = 0.44 & 14/24 = 0.58 \\ \hline
 [75 - 90]   & 5/22 = 0.23 & 8/27 = 0.30 & 6/24 = 0.25 \\ \hline
 [90 - 105]   & 4/22 = 0.18 & 1/27 = 0.04 & 3/24 = 0.13 \\ \hline
@@ -63,20 +63,20 @@ both \texttt{Vector\_1} and \texttt{Vector\_2}, this can be seen in
 \centering
 \begin{tabular}{|l|p{1.2cm}|p{1.2cm}|l|p{1.2cm}|p{1.2cm}|p{1.2cm}|l|p{1.2cm}|p{1.2cm}|}
 \hline
-\multicolumn{10}{|l|}{P(SD\_1|Vector\_1, Vector\_2)} \\\hline 
+\multicolumn{10}{|l|}{P(SD\_1|Vector\_1, Vector\_2)} \\\hline
 Vector\_2 & \multicolumn{3}{l|}{80\%} & \multicolumn{3}{l|}{Bad} &
-\multicolumn{3}{l|}{60\%}\\\hline 
-Vector\_1 & 80\%      &  Bad     & 60\%      & 80\%      & Bad      & 60\%     
+\multicolumn{3}{l|}{60\%}\\\hline
+Vector\_1 & 80\%      &  Bad     & 60\%      & 80\%      & Bad      & 60\%
 & 80\% & Bad & 60\% \\\hline
-[0-60]&1/12 = 0.08 & 1/3 = 0.33 & 0      & 2/12 = 0.17 & 1/6 = 0.17 & 0 & 0  
+[0-60]&1/12 = 0.08 & 1/3 = 0.33 & 0      & 2/12 = 0.17 & 1/6 = 0.17 & 0 & 0
 & 0 & 0 \\ \hline
-[60-75]&4/12 = 0.33 & 1/3 = 0.33 & 1      & 7/12 = 0.58 & 3/6 = 0.5 & 0      & 1     
+[60-75]&4/12 = 0.33 & 1/3 = 0.33 & 1      & 7/12 = 0.58 & 3/6 = 0.5 & 0      & 1
 & 7/15 = 0.47 & 5/9 = 0.56\\ \hline
-[75-90] & 4/12 = 0.33 & 0 & 0 & 2/12 = 0.17 & 1/6 = 0.17 & 2/3 = 0.67 & 0 
+[75-90] & 4/12 = 0.33 & 0 & 0 & 2/12 = 0.17 & 1/6 = 0.17 & 2/3 = 0.67 & 0
 & 5/15 = 0.33 &1/9 = 0.11\\\hline
-[90-105] & 2/12 = 0.17 & 1/3 = 0.33 & 0 & 1/12 = 0.08 & 0 & 0 & 0 
+[90-105] & 2/12 = 0.17 & 1/3 = 0.33 & 0 & 1/12 = 0.08 & 0 & 0 & 0
 & 2/15 = 0.07  & 3/9 = 0.33\\\hline
-[105-255] & 1/12 = 0.08 & 0 & 0 & 0 & 1/6 = 0.17 & 1/3 = 0.33 & 0 & 1/15 = 0.07     
+[105-255] & 1/12 = 0.08 & 0 & 0 & 0 & 1/6 = 0.17 & 1/3 = 0.33 & 0 & 1/15 = 0.07
 &0\\\hline
 \end{tabular}
 \caption{The probability table for sensing the distance given two vectors.}
@@ -84,8 +84,8 @@ Vector\_1 & 80\%      &  Bad     & 60\%      & 80\%      & Bad      & 60\%
 \end{table}
 
 
-% Vector\_0     & (0.028; -0.013) & (-0.005; -0.028) & (0.028,-0.028)  \\\hline   
-% [0 - 60]      & 0    & 0    & 2    \\ \hline 
+% Vector\_0     & (0.028; -0.013) & (-0.005; -0.028) & (0.028,-0.028)  \\\hline
+% [0 - 60]      & 0    & 0    & 2    \\ \hline
 % [60 - 75]    & 3    & 3    & 8    \\ \hline
 % [75 - 90]   & 3    & 3    & 4    \\ \hline
 % [90 - 105]   & 0    & 1    & 3    \\ \hline
@@ -104,8 +104,8 @@ the probability for \texttt{SA\_0} and \texttt{SA\_2}.
 \hline
 \multicolumn{4}{|l|}{P(SA\_0|Vector\_1)} \\ \hline
 Vector\_0     & (0.033; -0.029)-80\% & (0.012; -0.014)-Bad observations &
-(0.020,-0.018)-60\% \\\hline 
-[-30 - 0]   & 5/22 = 0.23 & 0    & 3/20 = 0.15   \\ \hline 
+(0.020,-0.018)-60\% \\\hline
+[-30 - 0]   & 5/22 = 0.23 & 0    & 3/20 = 0.15   \\ \hline
 [0 - 30]    & 8/22 = 0.36 & 8/30 = 0.27 & 9/20 = 0.45 \\ \hline
 [30 - 60]   & 8/22 = 0.36 & 10/30 = 0.33 & 8/20 = 0.40 \\ \hline
 [60 - 90]   & 1/22 = 0.05 & 5/30 = 0.17 & 0    \\ \hline
@@ -122,9 +122,9 @@ The probability table for \texttt{SA\_1} is given as:
 %{|l|l|l|l|l|l|l|l|l|l|}
 \begin{tabular}{|l|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|}
 \hline
-\multicolumn{10}{|l|}{P(SA\_1|Vector\_1, Vector\_2)} \\\hline 
+\multicolumn{10}{|l|}{P(SA\_1|Vector\_1, Vector\_2)} \\\hline
 Vector\_1 & \multicolumn{3}{l|}{80\%} & \multicolumn{3}{l|}{Bad} &
-\multicolumn{3}{l|}{60\%}\\\hline 
+\multicolumn{3}{l|}{60\%}\\\hline
 Vector\_2 & 80\% & Bad & 60\% & 80\% & Bad & 60\% & 80\% & Bad & 60\% \\
 \hline
 [-30 - 0] & 5/12 = 0.42  & 0/3 = 0 & 0/1 = 0 & 0/12 = 0 & 0/6 = 0 & 0/3 = 0 &
@@ -142,6 +142,9 @@ Vector\_2 & 80\% & Bad & 60\% & 80\% & Bad & 60\% & 80\% & Bad & 60\% \\
 \label{SDtable2}
 \end{table}
 
+\subsection{Filling in the probability tables}
+For each speed we want to implement in the model, we need a dataset, based on the sensor readings from turret. In order to gather datasets a test was performed. The test was conducted such that the observations were grouped into a set: each set consists of 3 sensor readings, the first two observations of a set are used to construct a vector V1 and the last two observations are used to construct a vector V2. Using this method we end up with a set of vectors based upon sensor observations, which means we know the values that resulted in the vector, which will come in handy in the next step.
+Next step is to group the resulting vectors according to whether or not it was deemed a good vector or a bad vector. After going through the vectors for each speed, we end up with two sorted list of vectors, one containing all the good vectors and one containing the faulty ones. Next step is plotting the  measurements that resulted in a given vector into a table, based on the sensor readings - the way this was accomplished was to look at a given vector and then reference the sensor readings. For example, we wanted to know the probability of a vector given an angle - so what we did was make a table with two columns - good and bad indicating the quality of the vector. We then referenced the specific vector and then plotted in the two angle values used to calculate the given vector. Doing this for each vector, we end up with a probability table. The same method is used to construct a probability table for distance.
 
 % The domain for time is considered the difference in time between the first
 % observation and subsequent observations, see \autoref{ST_table}. This means
@@ -153,15 +156,15 @@ Vector\_2 & 80\% & Bad & 60\% & 80\% & Bad & 60\% & 80\% & Bad & 60\% \\
 % \begin{tabular}{|l|l|l|l|}
 % \hline
 % \multicolumn{4}{|l|}{P(ST\_0|Vector\_0)} \\ \hline
-% Vector\_0     & (-0.15,-0.10) & (-0.15,-0.10)    & (-0.15,-0.10)  \\\hline   
-% [0 - 1500]      &     &     &     \\ \hline 
+% Vector\_0     & (-0.15,-0.10) & (-0.15,-0.10)    & (-0.15,-0.10)  \\\hline
+% [0 - 1500]      &     &     &     \\ \hline
 % [1501 - 3000]    &     &     &     \\ \hline
 % [3001 - 4500]   &     &     &     \\ \hline
 % \end{tabular}
 % \caption{The probability table for sensing time given a vector}
 % \end{table}
 % \end{center}
-% 
+%
 % The domains for velocity is set to be three seperate speeds, 30cm/s and 42cm/s,
 % which correspond to the target moving at 40\% and 60\% of its maximum speed,
 % see \autoref{Velo_table}.
@@ -171,7 +174,7 @@ Vector\_2 & 80\% & Bad & 60\% & 80\% & Bad & 60\% & 80\% & Bad & 60\% \\
 % \begin{tabular}{|l|l|l|l|}
 % \hline
 % \multicolumn{4}{|l|}{P(Velocity)} \\ \hline
-% 30cm/s   & 0.50   \\\hline   
+% 30cm/s   & 0.50   \\\hline
 % 42cm/s   & 0.50   \\ \hline
 % \end{tabular}
 % \caption{The probability table for velocity of the target.}
@@ -193,7 +196,7 @@ at 80\%, 60\% and a bad vector, see \autoref{Vector0_table}.
 \begin{tabular}{|l|l|}
 \hline
 P(Vector\_1) &\\ \hline
-(0.033; -0.029) & 13/33 = 0.39   \\ \hline 
+(0.033; -0.029) & 13/33 = 0.39   \\ \hline
 (0.012; -0.014) & 7/33 = 0.22  \\ \hline
 (60\%)   & 13/33 = 0.39  \\ \hline
 \end{tabular}
@@ -202,7 +205,7 @@ P(Vector\_1) &\\ \hline
 \end{center}
 
 The probability for \texttt{Vector\_2} is given as the following conditional
-probability table: 
+probability table:
 \begin{table}[]
 \centering
 \label{vector2tab}
@@ -224,8 +227,8 @@ probability table:
 % \begin{tabular}{|l|l|l|l|}
 % \hline
 % \multicolumn{4}{|l|}{P(SA\_0|Vector\_1)} \\ \hline
-% Vector\_0     & (0.033; -0.029) 80\% & (0.012; -0.014) Bad observation & 60\%  \\\hline 
-% (-30:0)   & 0.23 & 0    & 0    \\ \hline 
+% Vector\_0     & (0.033; -0.029) 80\% & (0.012; -0.014) Bad observation & 60\%  \\\hline
+% (-30:0)   & 0.23 & 0    & 0    \\ \hline
 % (0; 30)    & 0.36 & 0.27 & 0.15    \\ \hline
 % (30,60)   & 0.36    & 0.33 & 0.45   \\ \hline
 % (60:90)   & 0.045	& 0.17 & 0.4 	\\ \hline
@@ -253,5 +256,3 @@ nodes through the connections mentioned in \autoref{LabelBN}.
 
 We can look at \texttt{Vector\_2} and find the most likely outcome of it, and
 see if it is likely to be a bad vector.
-
-
