--- a/sections/Design/BNDesig/CondProbTables.tex
+++ b/sections/Design/BNDesig/CondProbTables.tex
@@ -1,10 +1,11 @@
+\chapter{Conditional Probability Tables}\label{ProbTabs}
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l|l|l|l|}
 \hline
 \multicolumn{4}{|l|}{P(SD\_0|Vector\_1)} \\ \hline
-Vector\_1     & 50cm/s & BV & 35cm/s \\\hline 
-[0 - 60]      & 3/22 = 0.14 & 3/27 = 0.11 & 0 \\ \hline 
+Vector\_1     & 50cm/s & BV & 35cm/s \\\hline
+[0 - 60]      & 3/22 = 0.14 & 3/27 = 0.11 & 0 \\ \hline
 [60 - 75]    & 9/22 = 0.41 & 12/27 = 0.44 & 14/24 = 0.58 \\ \hline
 [75 - 90]   & 5/22 = 0.23 & 8/27 = 0.30 & 6/24 = 0.25 \\ \hline
 [90 - 105]   & 4/22 = 0.18 & 1/27 = 0.04 & 3/24 = 0.13 \\ \hline
@@ -21,20 +22,20 @@ vector.}
 \centering
 \begin{tabular}{|l|p{1.2cm}|p{1.2cm}|l|p{1.2cm}|p{1.2cm}|p{1.2cm}|l|p{1.2cm}|p{1.2cm}|}
 \hline
-\multicolumn{10}{|l|}{P(SD\_1|Vector\_1, Vector\_2)} \\\hline 
+\multicolumn{10}{|l|}{P(SD\_1|Vector\_1, Vector\_2)} \\\hline
 Vector\_2 & \multicolumn{3}{l|}{50cm/s} & \multicolumn{3}{l|}{BV} &
-\multicolumn{3}{l|}{35cm/s}\\\hline 
-Vector\_1 & 50cm/s      &  BV     & 35cm/s      & 50cm/s      & BV      & 35cm/s     
+\multicolumn{3}{l|}{35cm/s}\\\hline
+Vector\_1 & 50cm/s      &  BV     & 35cm/s      & 50cm/s      & BV      & 35cm/s
 & 50cm/s & BV & 35cm/s \\\hline
-[0-60]&1/12 = 0.08 & 1/3 = 0.33 & 0      & 2/12 = 0.17 & 1/6 = 0.17 & 0 & 0  
+[0-60]&1/12 = 0.08 & 1/3 = 0.33 & 0      & 2/12 = 0.17 & 1/6 = 0.17 & 0 & 0
 & 0 & 0 \\ \hline
-[60-75]&4/12 = 0.33 & 1/3 = 0.33 & 1      & 7/12 = 0.58 & 3/6 = 0.5 & 0      & 1     
+[60-75]&4/12 = 0.33 & 1/3 = 0.33 & 1      & 7/12 = 0.58 & 3/6 = 0.5 & 0      & 1
 & 7/15 = 0.47 & 5/9 = 0.56\\ \hline
-[75-90] & 4/12 = 0.33 & 0 & 0 & 2/12 = 0.17 & 1/6 = 0.17 & 2/3 = 0.67 & 0 
+[75-90] & 4/12 = 0.33 & 0 & 0 & 2/12 = 0.17 & 1/6 = 0.17 & 2/3 = 0.67 & 0
 & 5/15 = 0.33 &1/9 = 0.11\\\hline
-[90-105] & 2/12 = 0.17 & 1/3 = 0.33 & 0 & 1/12 = 0.08 & 0 & 0 & 0 
+[90-105] & 2/12 = 0.17 & 1/3 = 0.33 & 0 & 1/12 = 0.08 & 0 & 0 & 0
 & 2/15 = 0.07  & 3/9 = 0.33\\\hline
-[105-255] & 1/12 = 0.08 & 0 & 0 & 0 & 1/6 = 0.17 & 1/3 = 0.33 & 0 & 1/15 = 0.07     
+[105-255] & 1/12 = 0.08 & 0 & 0 & 0 & 1/6 = 0.17 & 1/3 = 0.33 & 0 & 1/15 = 0.07
 &0\\\hline
 \end{tabular}
 \caption{The conditional probability table for sensing the distance given two
@@ -47,8 +48,8 @@ vectors.}
 \begin{tabular}{|l|l|l|l|}
 \hline
 \multicolumn{4}{|l|}{P(SA\_0|Vector\_1)} \\ \hline
-Vector\_1     & 50cm/s & BV & 35cm/s \\\hline 
-[-30 - 0]   & 5/22 = 0.23 & 0    & 3/20 = 0.15   \\ \hline 
+Vector\_1     & 50cm/s & BV & 35cm/s \\\hline
+[-30 - 0]   & 5/22 = 0.23 & 0    & 3/20 = 0.15   \\ \hline
 [0 - 30]    & 8/22 = 0.36 & 8/30 = 0.27 & 9/20 = 0.45 \\ \hline
 [30 - 60]   & 8/22 = 0.36 & 10/30 = 0.33 & 8/20 = 0.40 \\ \hline
 [60 - 90]   & 1/22 = 0.05 & 5/30 = 0.17 & 0    \\ \hline
@@ -64,9 +65,9 @@ Vector\_1     & 50cm/s & BV & 35cm/s \\\hline
 %{|l|l|l|l|l|l|l|l|l|l|}
 \begin{tabular}{|l|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|}
 \hline
-\multicolumn{10}{|l|}{P(SA\_1|Vector\_1, Vector\_2)} \\\hline 
+\multicolumn{10}{|l|}{P(SA\_1|Vector\_1, Vector\_2)} \\\hline
 Vector\_1 & \multicolumn{3}{l|}{50cm/s} & \multicolumn{3}{l|}{BV} &
-\multicolumn{3}{l|}{35cm/s}\\\hline 
+\multicolumn{3}{l|}{35cm/s}\\\hline
 Vector\_2 & 50cm/s & BV & 35cm/s & 50cm/s & BV & 35cm/s & 50cm/s & BV & 35cm/s
 \\
 \hline
@@ -90,7 +91,7 @@ Vector\_2 & 50cm/s & BV & 35cm/s & 50cm/s & BV & 35cm/s & 50cm/s & BV & 35cm/s
 \begin{tabular}{|l|l|}
 \hline
 P(Vector\_1) &\\ \hline
-50cm/s & 13/33 = 0.39   \\ \hline 
+50cm/s & 13/33 = 0.39   \\ \hline
 BV & 7/33 = 0.22  \\ \hline
 35cm/s & 13/33 = 0.39  \\ \hline
 \end{tabular}
@@ -100,7 +101,7 @@ BV & 7/33 = 0.22  \\ \hline
 \end{center}
 
 The probability for \texttt{Vector\_2} is given as the following conditional
-probability table: 
+probability table:
 \begin{table}[]
 \centering
 \begin{tabular}{|l|l|l|l|}
@@ -112,6 +113,5 @@ probability table:
  35cm/s    & 0            & 5/8 = 0.62    & 3/4 = 0.75  \\ \hline
 \end{tabular}
 \caption{The conditional probability table of Vector\_2 given Vector\_1}
-\label{vector2tab} 
+\label{vector2tab}
 \end{table}
-
