add condprobability tables to appendix

--- a/sections/Design/BNDesig/CondProbTables.tex
+++ b/sections/Design/BNDesig/CondProbTables.tex
@@ -1,4 +1,5 @@
-\chapter{Conditional Probability Tables}\label{ProbTabs}
+\chapter{Conditional Probability Tables}\label{AppProbTabs}
+This appendix is used to present the conditional probability tables used in \autoref{MID}.
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l|l|l|l|}
