--- a/sections/appAname.tex
+++ b/sections/appAname.tex
@@ -1,6 +1,7 @@
-\input{sections/Appendix/Physics/DistanceTest} 
+\input{sections/Appendix/Physics/DistanceTest}
 \input{sections/Appendix/Physics/FlourTestJones}
 \input{sections/Testing/AngleTest.tex}
 \input{sections/Testing/Speedtest.tex}
 \input{sections/Appendix/MI/MIData.tex}
+\input{sections/Design/BNDesig/CondProbTables.tex}
 % \input{sections/Testing/Testing.tex}
